--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
