пароль для учетки на основе google

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^6.0.7",
     "morgan": "1.10.0",
     "query-string": "^7.0.1",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
